# R4C

./: .env  .gitignore  Dockerfile_celery  R4C.postman_collection.json  Taskfile.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: workflows.yml
R4C/: settings.py  urls.py
customers/: models.py  urls.py  views.py
customers/migrations/: 0001_initial.py  0002_remove_customer_id_alter_customer_email.py
orders/: apps.py  models.py  signals.py
orders/migrations/: 0001_initial.py  0002_remove_order_robot_serial_order_robot_order_serial_and_more.py
robots/: apps.py  models.py  signals.py  urls.py  views.py
robots/migrations/: 0001_initial.py  0002_robot_blocked_robot_sold_alter_robot_id.py
services/periodic/: main.py
utils/: error_handlers.py  excel_functions.py  healthcheck.py  mailer.py  validators.py
utils/custom_exceptions/: MailFormatException.py  MultiException.py  NotEnoughDataException.py  SerialFormatException.py  WrongLengthException.py
