[tool.poetry]
name = "r4c"
version = "0.1.0"
description = ""
authors = ["Egor251 <egorpyshny@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
django = "^4.2.5"
openpyxl = "^3.1.2"
dj-database-url = "^2.1.0"
celery = {extras = ["redis"], version = "^5.3.4"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py310"]
include = '^.+\.pyi?$'

[tool.isort]
force_single_line = true
line_length = 79
multi_line_output = 3
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
files = ["."]
exclude = ["manage.py","R4C/","migrations/"]
no_implicit_optional = true
pretty = true
python_version = "3.10"
show_error_context = true
sqlite_cache = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disable_error_code = ['attr-defined','import']
